fix: 修复选图界面队伍管理按钮位置错误、地图详情选择错误、优化队伍管理UI、补充语言键