@@ -12,10 +12,10 @@ import net.minecraft.network.chat.Component;
 import org.jetbrains.annotations.NotNull;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 /**
- * 队伍管理界面，支持OP在比赛前或准备阶段对队员进行队伍分配和位置交换操作
+ * 队伍管理界面，支持OP对队员进行队伍分配操作。
+ * 点击玩家后会在底部显示变更队伍面板，无需重建界面。
  */
 public class FPSMTeamManageScreen extends Screen {
     private static final int BUTTON_WIDTH = 130;
@@ -37,7 +37,7 @@ public class FPSMTeamManageScreen extends Screen {
     protected void init() {
         super.init();
         rebuildTeamData();
-        buildButtons();
+        buildWidgets();
     }
 
     private void rebuildTeamData() {
@@ -45,85 +45,104 @@ public class FPSMTeamManageScreen extends Screen {
         teams.addAll(FPSMClient.getGlobalData().getTeams());
     }
 
-    private void buildButtons() {
+    private void buildWidgets() {
         this.clearWidgets();
-        int startY = 40;
-        int columnSpacing = COLUMN_WIDTH + PADDING * 2;
 
-        // 标题行按钮
-        int titleX = this.width / 2 - 60;
+        // 顶部按钮栏
         this.addRenderableWidget(Button.builder(Component.translatable("gui.fpsm.team_manage.refresh"), btn -> {
+            selectedPlayer = null;
+            selectedPlayerTeam = null;
             rebuildTeamData();
-            buildButtons();
-        }).pos(titleX - 60, 5).size(50, 20).build());
+            buildWidgets();
+        }).pos(10, 5).size(50, 20).build());
 
         this.addRenderableWidget(Button.builder(Component.translatable("gui.fpsm.team_manage.close"), btn -> {
             this.onClose();
-        }).pos(titleX + 100, 5).size(50, 20).build());
+        }).pos(width - 60, 5).size(50, 20).build());
 
         if (teams.isEmpty()) {
             return;
         }
 
         // 队伍列
+        int columnSpacing = COLUMN_WIDTH + PADDING * 2;
         int totalColumns = teams.size();
         int totalWidth = totalColumns * columnSpacing + PADDING;
         int startX = (this.width - totalWidth) / 2;
+        int startY = 40;
 
-        for (int columnIndex = 0; columnIndex < teams.size(); columnIndex++) {
-            ClientTeam team = teams.get(columnIndex);
-            int colX = startX + columnIndex * columnSpacing;
+        for (int ci = 0; ci < teams.size(); ci++) {
+            ClientTeam team = teams.get(ci);
+            int colX = startX + ci * columnSpacing;
 
-            // 队伍名称标题
-            Component teamTitle = Component.literal(team.name.toUpperCase());
-            this.addRenderableWidget(Button.builder(teamTitle, btn -> {}).pos(colX, startY).size(COLUMN_WIDTH, BUTTON_HEIGHT).build());
+            // 队伍名称
+            this.addRenderableWidget(Button.builder(Component.literal("§l" + team.name.toUpperCase()), btn -> {})
+                    .pos(colX, startY).size(COLUMN_WIDTH, BUTTON_HEIGHT).build());
 
             // 玩家列表
-            List<Map.Entry<UUID, PlayerData>> playerEntries = new ArrayList<>(team.players.entrySet());
+            List<Map.Entry<UUID, PlayerData>> entries = new ArrayList<>(team.players.entrySet());
             int playerY = startY + BUTTON_HEIGHT + PADDING;
-            int maxPlayers = Math.min(playerEntries.size(), 20);
-            for (int i = 0; i < maxPlayers; i++) {
-                PlayerData playerData = playerEntries.get(i).getValue();
-                Component playerComponent = playerData.name().copy();
+            for (int i = 0; i < Math.min(entries.size(), 20); i++) {
+                PlayerData data = entries.get(i).getValue();
+                boolean isSelected = selectedPlayer != null && selectedPlayer.getOwner().equals(data.getOwner());
 
-                this.addRenderableWidget(Button.builder(playerComponent, btn -> {
-                    selectedPlayer = playerData;
+                Component label = isSelected
+                        ? Component.literal("▶ " + data.name().getString())
+                        : data.name().copy();
+
+                this.addRenderableWidget(Button.builder(label, btn -> {
+                    selectedPlayer = data;
                     selectedPlayerTeam = team.name;
-                    showMoveOptions();
+                    buildWidgets(); // 刷新高亮和底部面板
                 }).pos(colX, playerY + i * (BUTTON_HEIGHT + 2)).size(COLUMN_WIDTH, BUTTON_HEIGHT).build());
             }
         }
+
+        // 底部变更面板（选中玩家后显示）
+        if (selectedPlayer != null) {
+            renderMovePanel();
+        }
     }
 
-    private void showMoveOptions() {
-        int startY = this.height / 2 + 50;
+    private void renderMovePanel() {
+        int panelTop = this.height - 72;
+        int panelLeft = this.width / 4;
+        int panelRight = this.width * 3 / 4;
         int centerX = this.width / 2;
 
-        this.clearWidgets();
-        buildButtons();
+        // 选中提示
+        Component hint = Component.translatable("gui.fpsm.team_manage.selected",
+                selectedPlayer.name().getString(), selectedPlayerTeam.toUpperCase());
 
+        // 移动按钮
         List<String> otherTeams = teams.stream()
                 .map(t -> t.name)
                 .filter(t -> !t.equals(selectedPlayerTeam))
-                .collect(Collectors.toList());
+                .toList();
 
-        int optionY = startY;
-        for (String targetTeam : otherTeams) {
-            Component moveText = Component.translatable("gui.fpsm.team_manage.move_to",
-                    selectedPlayer.name().getString(), targetTeam.toUpperCase());
-            final String finalTarget = targetTeam;
-            this.addRenderableWidget(Button.builder(moveText, btn -> {
-                movePlayer(finalTarget);
-            }).pos(centerX - BUTTON_WIDTH / 2, optionY).size(BUTTON_WIDTH, BUTTON_HEIGHT).build());
-            optionY += BUTTON_HEIGHT + 5;
+        if (otherTeams.isEmpty()) {
+            this.addRenderableWidget(Button.builder(
+                    Component.translatable("gui.fpsm.team_manage.no_other_team"), btn -> {})
+                    .pos(centerX - 80, panelTop + 24).size(160, BUTTON_HEIGHT).build());
+        } else {
+            int totalW = otherTeams.size() * (BUTTON_WIDTH + 4) - 4;
+            int startX = centerX - totalW / 2;
+            for (int i = 0; i < otherTeams.size(); i++) {
+                final String target = otherTeams.get(i);
+                Component btnText = Component.translatable("gui.fpsm.team_manage.move_btn", target.toUpperCase());
+                this.addRenderableWidget(Button.builder(btnText, btn -> movePlayer(target))
+                        .pos(startX + i * (BUTTON_WIDTH + 4), panelTop + 24)
+                        .size(BUTTON_WIDTH, BUTTON_HEIGHT).build());
+            }
         }
 
-        this.addRenderableWidget(Button.builder(Component.translatable("gui.fpsm.team_manage.cancel"), btn -> {
-            selectedPlayer = null;
-            selectedPlayerTeam = null;
-            this.clearWidgets();
-            buildButtons();
-        }).pos(centerX - BUTTON_WIDTH / 2, optionY + 5).size(BUTTON_WIDTH, BUTTON_HEIGHT).build());
+        // 取消按钮
+        this.addRenderableWidget(Button.builder(
+                Component.translatable("gui.fpsm.team_manage.cancel"), btn -> {
+                    selectedPlayer = null;
+                    selectedPlayerTeam = null;
+                    buildWidgets();
+                }).pos(centerX - 40, panelTop + 48).size(80, BUTTON_HEIGHT).build());
     }
 
     private void movePlayer(String targetTeam) {
@@ -132,11 +151,9 @@ public class FPSMTeamManageScreen extends Screen {
                 selectedPlayer.getOwner(),
                 targetTeam
         ));
-
         selectedPlayer = null;
         selectedPlayerTeam = null;
-        this.clearWidgets();
-        buildButtons();
+        buildWidgets();
     }
 
     @Override
@@ -144,6 +161,19 @@ public class FPSMTeamManageScreen extends Screen {
         this.renderBackground(graphics);
         super.render(graphics, mouseX, mouseY, partialTick);
         graphics.drawCenteredString(this.font, this.title, this.width / 2, 10, 0xFFFFFF);
+
+        // 底部面板背景框
+        if (selectedPlayer != null) {
+            int panelTop = this.height - 72;
+            int panelLeft = this.width / 4;
+            int panelRight = this.width * 3 / 4;
+            graphics.fill(panelLeft, panelTop - 2, panelRight, panelTop, 0xFF666666);
+            graphics.fill(panelLeft, panelTop, panelRight, this.height - 10, 0xAA000000);
+
+            Component hint = Component.translatable("gui.fpsm.team_manage.selected",
+                    selectedPlayer.name().getString(), selectedPlayerTeam.toUpperCase());
+            graphics.drawCenteredString(this.font, hint, this.width / 2, panelTop + 6, 0xFFE6F2FF);
+        }
     }
 
     @Override
